service unit file cannot have in-line comment anymore

--- a/simple-temp-queue-pusher.service
+++ b/simple-temp-queue-pusher.service
@@ -4,7 +4,8 @@ After=network.target
 
 [Service]
 Type=simple
-User=root # because we need to /dev/hidraw
+User=root
+# because we need to /dev/hidraw
 
 ExecStart=/home/peter/build/simple-temp-queue-pusher/simple-temp-queue-pusher.py
 WorkingDirectory=/home/peter/build/simple-temp-queue-pusher
